<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="304dp"
        android:layout_weight="1.20" >
    </ListView>

    <TextView
        android:id="@+id/last_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_refresh_to_see_your_books" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/renew_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/renew_all_books" />

    <TextView
        android:id="@+id/closingTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/gettingOpeningTimes"
        tools:context=".MainActivity" />

</LinearLayout>